--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,35 @@
 body{
-    margin: 0px;
-    padding: 0px;
+    background-color: yellow;
+    color: white;
+    font-family: 'Comfortaa', cursive;
+    font-size: 1.2em;
+    padding: 0;
+    margin: 0;
+    height: 100%;
 }
-    .purple {background-color: purple;}
-    .black {background-color: black;}
-    .ciel {background-color: lightskyblue;}
-    .blue {background-color: blue;}
-    .green {background-color: green;}
-    .yellow {background-color: yellow;}
-    .red {background-color: red;}
+header, footer {
+ color: #ffffff;
+ background-color: #aeaca8;
+ width: 100%;
+ height: 50px;
+}
+header{
+    display: inline-flex;
+    font-family: 'Rambla', sans-serif;
+    font-size: 1.1em;
+}
+
+#container{
+    background-image: url(../images/phy11.jpg);
+    display: block;
+    height: 800px;
+}
+
+.otroIntento{
+   color: yellow;
+   font-weight: bold;
+}
+
+footer{
+    text-align: center;
+}
